--- a/example_frontend.html
+++ b/example_frontend.html
@@ -9,4 +9,10 @@
 <body>
     <div>This HTML file isn't part of the Rails app. It is here to help you test JS against Rails as you follow along.</div>
 </body>
+
+<script>
+
+fetch('http://localhost:3000/birds').then(response => response.json()).then(object => console.log(object))
+
+</script>
 </html>
